--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brendanmarks.github.io",
-  "homepage": "https://brendanmarks.github.io",
+  "homepage": "http://brendanmarks.github.io/website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
